fix: Add styles for offer modal to improve layout on smaller screens

--- a/public/css/pages/productDetails.css
+++ b/public/css/pages/productDetails.css
@@ -1023,6 +1023,12 @@
 }
 
 @media (max-width: 768px) {
+
+    .offer-modal {
+        overflow-y: hidden;
+        width: 350px;
+        height: 600px;
+    }
     .product-details-wrapper {
         flex-direction: column;
     }
